added our first map, zoom on Nepal

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <!--end of leaflet.js css -->
     <title>Leaflet tutorial</title>
     <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
       #map {
         width: 100%;
         height: 100vh;
@@ -30,7 +34,7 @@
     ></script>
     <script>
       /*initializing a map*/
-      let map = L.map("map").setView([51.505, -0.09], 13);
+      let map = L.map("map").setView([28.394857, 84.124008], 8);
       /*initializing a map*/
 
       /*osm layer*/
