added watercolor tile layer

--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
       });
       osm.addTo(map);
       /*osm layer*/
+      /*water color*/
+      let Stamen_Watercolor = L.tileLayer(
+        "https://stamen-tiles-{s}.a.ssl.fastly.net/watercolor/{z}/{x}/{y}.{ext}",
+        {
+          attribution:
+            'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+          subdomains: "abcd",
+          minZoom: 1,
+          maxZoom: 16,
+          ext: "jpg",
+        }
+      );
+      Stamen_Watercolor.addTo(map);
+      /*water color*/
     </script>
     <!--end of leaflet.js js script-->
   </body>
