catching lat and lon obj properties informations with mousemove event

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         console.log("Your mouse is over the map");
       });
       map.on("mousemove", function (e) {
-        console.log(e);
+        console.log("lat: " + e.latlng.lat, "lng: " + e.latlng.lng);
       });
     </script>
 
