--- a/index.html
+++ b/index.html
@@ -27,16 +27,11 @@
   <body>
     <div id="map"></div>
     <!--start of leaflet.js js script-->
-    <script
-      src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-      crossorigin=""
-    ></script>
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
     <script>
       /*initializing a map*/
       let map = L.map("map").setView([28.394857, 84.124008], 8);
       /*initializing a map*/
-
       /*osm layer*/
       let osm = L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png", {
         attribution:
@@ -44,100 +39,40 @@
       });
       osm.addTo(map);
       /*osm layer*/
-      /*water color*/
-      let Watercolor = L.tileLayer(
-        "https://stamen-tiles-{s}.a.ssl.fastly.net/watercolor/{z}/{x}/{y}.{ext}",
-        {
-          attribution:
-            'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-          subdomains: "abcd",
-          minZoom: 1,
-          maxZoom: 16,
-          ext: "jpg",
+      if (!navigator.geolocation) {
+        console.log(
+          "Your browser does not support this support geolocation feature"
+        );
+      } else {
+        setInterval(() => {
+          navigator.geolocation.getCurrentPosition(getPosition);
+        }, 5000);
+      }
+      let marker, circle;
+      function getPosition(position) {
+        console.log(position);
+        let lat = position.coords.latitude;
+        let lon = position.coords.longitude;
+        let accuracy = position.coords.accuracy;
+        if (marker) {
+          map.removeLayer(marker);
         }
-      );
-      // Watercolor.addTo(map)
-      /*water color*/
-      /*dark map*/
-      let DarkMatter = L.tileLayer(
-        "https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png",
-        {
-          attribution:
-            '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
-          subdomains: "abcd",
-          maxZoom: 20,
+        if (circle) {
+          map.removeLayer(circle);
         }
-      );
-      //DarkMatter.addTo(map);
-      /*dark map*/
-      /*google street*/
-      let googleStreets = L.tileLayer(
-        "http://{s}.google.com/vt/lyrs=m&x={x}&y={y}&z={z}",
-        {
-          maxZoom: 20,
-          subdomains: ["mt0", "mt1", "mt2", "mt3"],
-        }
-      );
-      //googleStreets.addTo(map);
-      /*google street*/
-      /*google satellite*/
-      let googleSat = L.tileLayer(
-        "http://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}",
-        {
-          maxZoom: 20,
-          subdomains: ["mt0", "mt1", "mt2", "mt3"],
-        }
-      );
-      //googleSat.addTo(map);
-      let nexrad = L.tileLayer.wms(
-        "http://mesonet.agron.iastate.edu/cgi-bin/wms/nexrad/n0r.cgi",
-        {
-          layers: "nexrad-n0r-900913",
-          format: "image/png",
-          transparent: true,
-          attribution: "Weather data © 2012 IEM Nexrad",
-        }
-      );
-      nexrad.addTo(map);
-      /*google satellite*/
-      /*marker*/
-      //let marker = L.marker([28.394857, 84.124008]).addTo(map);
-      let myIcon = L.icon({
-        iconUrl: "img/icon.png",
-        iconSize: [40, 40],
-      });
-
-      let marker = L.marker([28.394857, 84.124008], { icon: myIcon });
-      let popUp = marker
-        .bindPopup("This is the Nepal" + marker.getLatLng())
-        .openPopup();
-      popUp.addTo(map);
-      let secondMarker = L.marker([29.394857, 85.124008], { icon: myIcon });
-      console.log(marker.toGeoJSON());
-      /*marker*/
-      let baseMaps = {
-        OSM: osm,
-        "Water color map": Watercolor,
-        Dark: DarkMatter,
-        "Google Streets": googleStreets,
-        "Google Satellite": googleSat,
-      };
-      let overlayMaps = {
-        Marker: marker,
-        "Second marker": secondMarker,
-      };
-      L.control
-        .layers([baseMaps, overlayMaps], { collapsed: false })
-        .addTo(map);
-      map.removeLayer(osm);
-      let geojsonLayer = new L.GeoJSON.AJAX("geojson.json");
-      //leaflet events
-      map.on("mouseover", function () {
-        console.log("Your mouse is over the map");
-      });
-      map.on("mousemove", function (e) {
-        console.log("lat: " + e.latlng.lat, "lng: " + e.latlng.lng);
-      });
+        marker = L.marker([lat, lon]);
+        circle = L.circle([lat, lon], { radius: accuracy });
+        let featureGroup = L.featureGroup([marker, circle]).addTo(map);
+        map.fitBounds(featureGroup.getBounds());
+        console.log(
+          "Your coordinate is: lat " +
+            lat +
+            "long" +
+            lon +
+            "accuracy" +
+            accuracy
+        );
+      }
     </script>
 
     <!--end of leaflet.js js script-->
